--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ input{
 	border-radius: 40px;
 }
 h1{
+	margin: 30px;
 	display: flex;
 	position: relative;
 	text-align: center;
@@ -11,13 +12,17 @@ div{
 	background-color: white;
 	border-radius: 20px;
 	padding: 100px;
-
 }
 #send{
 	text-align: center;
 	padding: 10%;
 	width: 200px;
 	border-radius: 40px;
+}
+#send:hover{
+	cursor: pointer;
+	background-color: rgb(55, 137, 214);
+	transition: 1s;
 }
 #user{
 	display: flex;
@@ -33,7 +38,7 @@ body{
     font-weight: 200px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 	padding: 10%;
-    background: #a437d6 url('https://static.tumblr.com/03fbbc566b081016810402488936fbae/pqpk3dn/MRSmlzpj3/tumblr_static_bg3.png') repeat 0 0;
+    background: rgb(55, 137, 214) url('https://static.tumblr.com/03fbbc566b081016810402488936fbae/pqpk3dn/MRSmlzpj3/tumblr_static_bg3.png') repeat 0 0;
 	-webkit-animation: 10s linear 0s normal none infinite animate;
 	-moz-animation: 10s linear 0s normal none infinite animate;
 	-ms-animation: 10s linear 0s normal none infinite animate;
